@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-25T00:32:58Z",
+  "timestamp" : "2022-07-25T08:08:17Z",
   "count_outdated" : 1681,
   "uniques_outdated" : 485,
-  "count" : 1712,
+  "count" : 1711,
   "uniques" : 501,
   "clones" : [
     {
       "timestamp": "2022-07-11T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
